--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <textarea id="message" name="message" rows="5" required></textarea>
 
             <button type="submit">
-                <i class="fa fa-paper-plane"></i> Send Message
+                <i class="fa fa-paper-plane"></i> Send Messages
             </button>
         </form>
     </section>
