final changes done!

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
@@ -27,8 +29,10 @@
         <h2>Contact Me!</h2>
         <div class="contact-icons">
             <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Halifax, Canada</p>
-            <p class="contact-icon-p2"><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +1 902 989 7927</p>
-            <p class="contact-icon-p2"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: ybhakta100@gmail.com</p>
+            <p class="contact-icon-p2"><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +1 902 989
+                7927</p>
+            <p class="contact-icon-p2"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email:
+                ybhakta1000@gmail.com</p>
         </div>
 
         <p>Lets get in touch. Send me a message:</p>
@@ -54,15 +58,45 @@
     <section class="social-media">
         <h2>Find Me on Social Media</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/bhakta-yash/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/YASH-BHAKTA" target="_blank">GitHub</a></li>
-            <li><a href="https://x.com/yash_bhakta_27" target="_blank">Twitter</a></li>
+            <li>
+                <a href="https://www.linkedin.com/in/bhakta-yash/" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/YASH-BHAKTA" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </li>
+            <li>
+                <a href="https://x.com/yash_bhakta_27" target="_blank">
+                    <i class="fab fa-x-twitter"></i> Twitter
+                </a>
+            </li>
         </ul>
-
     </section>
-    <footer>
-        <p>&copy;2024 Yash Bhakta E-Portfolio</p>
 
+    <footer>
+        <p>&copy; 2024 Yash Bhakta E-Portfolio | All Rights Reserved</p>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="goals.html">Goals</a> |
+            <a href="resume.html">Resume</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/bhakta-yash"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/YASH-BHAKTA"><i class="fab fa-github"></i> GitHub</a>
+        </div>
+        <p class="contact-icon-p2"><i class="fa fa-phone fa-fw  w3-margin-right"></i>+1 902 989 7927
+        </p>
+
+        <p class="social-media">
+            <i class="fa fa-envelope"></i>
+            <a href="mailto:ybhakta1000@gmail.com">ybhakta1000@gmail.com</a>
+        </p>
+        
     </footer>
 </body>
 
