--- a/goals.html
+++ b/goals.html
@@ -50,7 +50,26 @@
     </section>
 
     <footer>
-        <p>&copy;2024 Yash Bhakta E-Portfolio</p>
+        <p>&copy; 2024 Yash Bhakta E-Portfolio | All Rights Reserved</p>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="goals.html">Goals</a> |
+            <a href="resume.html">Resume</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/bhakta-yash"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/YASH-BHAKTA"><i class="fab fa-github"></i> GitHub</a>
+        </div>
+        <p class="contact-icon-p2"><i class="fa fa-phone fa-fw  w3-margin-right"></i>+1 902 989 7927
+        </p>
+
+        <p class="social-media">
+            <i class="fa fa-envelope"></i>
+            <a href="mailto:ybhakta1000@gmail.com">ybhakta1000@gmail.com</a>
+        </p>
+        
     </footer>
 </body>
 
