--- a/resume.html
+++ b/resume.html
@@ -58,10 +58,17 @@
     <section class="resume-section">
         <h2>Education</h2>
         <table class="resume-table">
+
             <tr>
                 <th>Degree</th>
                 <th>Institution</th>
                 <th>Details</th>
+            </tr>
+            <tr>
+                <td>Fullstack Application Development</td>
+                <td>Nova Scotia Community College (IT CAMPUS)</td>
+                <td>Covered both front-end and back-end development, including HTML, CSS, JavaScript, Node.js, React.js and
+                    databases.</td>
             </tr>
             <tr>
                 <td>IT Programming in IoT</td>
@@ -80,6 +87,34 @@
             </tr>
         </table>
     </section>
+    <section class="resume-section">
+        <h2>Projects</h2>
+        <table class="resume-table">
+            <tr>
+                <th>Project Name</th>
+                <th>Technologies Used</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td>Smart Security Door System</td>
+                <td>IoT, Node.js, Express.js, MongoDB, React.js</td>
+                <td>Developed a smart home security system with remote access, motion detection, and real-time
+                    surveillance.</td>
+            </tr>
+            <tr>
+                <td>Alumni Association Platform</td>
+                <td>React.js, Tailwind CSS, Node.js, Express.js, MongoDB</td>
+                <td>Created a platform for alumni networking, featuring event management, discussion forums, and
+                    real-time chat.</td>
+            </tr>
+            <tr>
+                <td>Canteen Management System</td>
+                <td>ASP.NET, C#, HTML, CSS, JavaScript</td>
+                <td>Designed an online food ordering and pickup scheduling system to streamline canteen operations.</td>
+            </tr>
+        </table>
+    </section>
+
     <section class="resume-section">
         <h2>Hobbies/Activities</h2>
         <table class="resume-table">
@@ -112,7 +147,26 @@
         </table>
     </section>
     <footer>
-        <p>&copy;2024 Yash Bhakta E-Portfolio</p>
+        <p>&copy; 2024 Yash Bhakta E-Portfolio | All Rights Reserved</p>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="goals.html">Goals</a> |
+            <a href="resume.html">Resume</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/bhakta-yash"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/YASH-BHAKTA"><i class="fab fa-github"></i> GitHub</a>
+        </div>
+        <p class="contact-icon-p2"><i class="fa fa-phone fa-fw  w3-margin-right"></i>+1 902 989 7927
+        </p>
+
+        <p class="social-media">
+            <i class="fa fa-envelope"></i>
+            <a href="mailto:ybhakta1000@gmail.com">ybhakta1000@gmail.com</a>
+        </p>
+        
     </footer>
 </body>
 
